Refactor sendDeliveries
